# tethys_app

./: .gitignore  AI_USE.md  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  install.yml  pyproject.toml
.github/workflows/: smoke-test.yml
launchd/: com.andean-hydromet.forecast.plist.template
scripts/: bootstrap.sh  install_launchd.sh  run_forever_hourly.sh  run_hourly_forecast.sh  run_live_forecast.sh  start_server.sh
tests/: test_forecast_pipeline.py
tethysapp/andean_hydromet/: __init__.py  app.py  controllers.py
tethysapp/andean_hydromet/model/: __init__.py
tethysapp/andean_hydromet/public/css/: main.css
tethysapp/andean_hydromet/public/js/: main.js
tethysapp/andean_hydromet/services/: __init__.py  dashboard.py  forecast_pipeline.py
tethysapp/andean_hydromet/templates/andean_hydromet/: base.html  home.html
